@@ -3,6 +3,13 @@ package com.erp.crm.services;
 import com.erp.crm.dto.*;
 import com.erp.crm.models.*;
 import com.erp.crm.repositories.*;
+import com.erp.crm.security.SecurityUtils;
+import com.erp.crm.security.UserPrincipal;
+
+import lombok.RequiredArgsConstructor;
+
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -12,6 +19,7 @@ import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class SaleService {
 
     private final SaleRepository saleRepo;
@@ -34,56 +42,30 @@ public class SaleService {
         this.invoiceRepo = invoiceRepo;
         this.serviceEntitlementRepo = serviceEntitlementRepo;
     }
+    private final SecurityUtils securityUtils;
 
-    // Create Sale
-    public SaleResponseDTO createSale(SaleRequestDTO dto) {
-        Sale sale = new Sale();
-        sale.setSaleDate(LocalDate.now());
-        sale.setAdmin(findUserById(dto.getAdminId(), "ADMIN"));
-        sale.setMarketer(findUserById(dto.getMarketerId(), "MARKETER"));
-        sale.setTotalAmount(dto.getTotalAmount());
-
-        if (dto.getDealerId() != null) {
-            sale.setDealer(findUserById(dto.getDealerId(), "DEALER"));
-        } else if (dto.getCustomerId() != null) {
-            sale.setCustomer(customerRepo.findById(dto.getCustomerId())
-                    .orElseThrow(() -> new RuntimeException("Customer not found")));
-        } else {
-            throw new RuntimeException("Either dealerId or customerId must be provided");
-        }
-
-        if (dto.getItems() != null && !dto.getItems().isEmpty()) {
-            List<SaleItem> items = dto.getItems().stream().map(i -> {
-                SaleItem item = new SaleItem();
-                Product product = productRepo.findById(i.getProductId())
-                        .orElseThrow(() -> new RuntimeException("Product not found"));
-                item.setSale(sale);
-                item.setProduct(product);
-                item.setQuantity(i.getQuantity());
-                item.setUnitPrice(i.getQuantity() * product.getPrice());
-                return item;
-            }).toList();
-            sale.setSaleItems(items);
-        } else {
-            throw new RuntimeException("Sale Items cannot be null, select at least 1 product");
-        }
-
-        Sale saved = saleRepo.save(sale);
-        return mapToDto(saved);
-    }
-
-    // Update Sale Status
     public SaleResponseDTO updateSaleStatus(Long saleId, Status status) {
         Sale sale = saleRepo.findById(saleId)
                 .orElseThrow(() -> new RuntimeException("Sale not found with id: " + saleId));
 
         Status oldStatus = sale.getSaleStatus();
         sale.setSaleStatus(status);
+
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (status == Status.APPROVED && auth != null && auth.getPrincipal() instanceof UserPrincipal principal) {
+            String email = principal.getUsername();
+            User admin = userRepo.findByEmail(email)
+                    .orElseThrow(() -> new RuntimeException("User not found with email: " + email));
+            sale.setApprovedBy(admin);
+        }
+
         Sale savedSale = saleRepo.save(sale);
 
+        // Generate invoice only when status changes from PENDING to APPROVED
         if (oldStatus == Status.PENDING && status == Status.APPROVED) {
             generateInvoice(savedSale);
             createServiceEntitlements(savedSale);
+            createServiceEntitlements(savedSale); // Create 2 free services
         }
 
         return mapToDto(savedSale);
@@ -119,6 +101,46 @@ public class SaleService {
     }
 
     // Getters
+    public SaleResponseDTO createSale(SaleRequestDTO dto) {
+        Sale sale = new Sale();
+        sale.setSaleDate(LocalDate.now());
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth != null && auth.getPrincipal() instanceof UserPrincipal principal) {
+            String email = principal.getUsername();
+            User user = userRepo.findByEmail(email)
+                    .orElseThrow(() -> new RuntimeException("User not found with email: " + email));
+            sale.setCreatedBy(user);
+        }
+        sale.setTotalAmount(dto.getTotalAmount());
+
+        if (dto.getCustomerId() != null) {
+            sale.setCustomer(customerRepo.findById(dto.getCustomerId())
+                    .orElseThrow(() -> new RuntimeException("Customer not found with id: " + dto.getCustomerId())));
+        } else {
+            throw new RuntimeException("customerId must be provided");
+        }
+
+        if (dto.getItems() != null && !dto.getItems().isEmpty()) {
+            List<SaleItem> items = dto.getItems().stream().map(i -> {
+                SaleItem item = new SaleItem();
+                Product product = productRepo.findById(i.getProductId())
+                        .orElseThrow(() -> new RuntimeException("Product not found with id: " + i.getProductId()));
+                item.setSale(sale);
+                item.setProduct(product);
+                item.setQuantity(i.getQuantity());
+                Double unitPrice = i.getQuantity() * product.getPrice();
+                item.setUnitPrice(unitPrice);
+                return item;
+            }).toList();
+            sale.setSaleItems(items);
+        } else {
+            throw new RuntimeException("Sale Items cannot be null , Atleast select 1 product");
+        }
+
+        Sale saved = saleRepo.save(sale);
+        return mapToDto(saved);
+    }
+
     public SaleResponseDTO getSale(Long saleId) {
         return saleRepo.findById(saleId).map(this::mapToDto)
                 .orElseThrow(() -> new RuntimeException("Sale not found"));
@@ -128,23 +150,23 @@ public class SaleService {
         return saleRepo.findAll().stream().map(this::mapToDto).collect(Collectors.toList());
     }
 
-    public List<SaleResponseDTO> getSalesByDealer(Long dealerId) {
-        User dealer = findUserById(dealerId, "DEALER");
-        return saleRepo.findAllByDealer(dealer).stream().map(this::mapToDto).collect(Collectors.toList());
+    public List<SaleResponseDTO> getSalesByMarketer(Long userId) {
+        User user = findUserById(userId);
+        return saleRepo.findAllByCreatedByUserId(user.getUserId()).stream()
+                .map(this::mapToDto)
+                .toList();
     }
 
     // Helper DTO mapping
     private SaleResponseDTO mapToDto(Sale sale) {
         SaleResponseDTO dto = new SaleResponseDTO();
         dto.setSaleId(sale.getSaleId());
-        dto.setAdminName(sale.getAdmin().getName());
-        dto.setMarketerName(sale.getMarketer().getName());
+        if (sale.getApprovedBy() != null) {
+            dto.setApprovedBy(sale.getApprovedBy().getName());
+        }
+        dto.setCreatedBy(sale.getCreatedBy().getName());
 
-        if (sale.getDealer() != null) {
-            dto.setCustomerType("DEALER");
-            dto.setCustomerName(sale.getDealer().getName());
-        } else if (sale.getCustomer() != null) {
-            dto.setCustomerType("RETAIL");
+        if (sale.getCustomer() != null) {
             dto.setCustomerName(sale.getCustomer().getCustomerName());
         }
 
@@ -165,7 +187,8 @@ public class SaleService {
     }
 
     private User findUserById(Long id, String role) {
+    private User findUserById(Long id) {
         return userRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException(role + " not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
     }
 }
